# hspec-kickstart

./: Gemfile  README.md  hspec-kickstart.cabal
src/: Hello.hs
test/: HelloSpec.hs
